# quantum_quirkvis

./: .gitignore  LICENSE  README.md  pyproject.toml  test_manual.py
src/quantum_quirkvis/: __init__.py  cli.py  drawer.py  theme.py
src/quantum_quirkvis/themes/: default.json  night.json  test_manual.py
tests/: tests.py
tests/qasms/: all_gates.qasm  ghz.qasm  parametric.qasm
tests/themes/: emoji_sub.json
tests/themes.off/: candy.json  extreme_emoji.json  high_contrast.json  solarized.json
