[project]
name = "quirkvis"
version = "0.1.0"
description = "Highlty Customizable Quantum Circuit SVG Visualizer"
authors = [
    { name = "Luis J Camargo", email = "lsjcp@yahoo.com" }
]
dependencies = [
    "pyqasm",
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
qasmvis = "quantum_quirkvis.cli:main"
quirkvis = "quantum_quirkvis.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
